# Fedot-assistant

./: .env_example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/air-quality/: .gitignore
examples/multimodal/: multimodal.ipynb
fedotllm/: __init__.py  assistant.py  constants.py  exceptions.py  predictor.py  task.py
fedotllm/configs/: best_quality.yaml  default.yaml  medium_quality.yaml
fedotllm/llm/: __init__.py  llm.py
fedotllm/predictor/: __init__.py  autogluon.py  base.py  fedot.py  fedot_ind.py
fedotllm/prompting/: __init__.py  prompt_generator.py  utils.py
fedotllm/server/: app.py  event.py  stream.py
fedotllm/tabular/: __init__.py  constants.py  dataset.py
fedotllm/task_inference/: __init__.py  task_inference.py
fedotllm/transformer/: base.py
fedotllm/transformer/feature_transformers/: base.py  caafe.py
fedotllm/utils/: __init__.py  configs.py  files.py
