[project]
name = "fedotllm"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Lapin"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "autogluon-tabular[all] (>=1.2,<2.0)",
    "openai (>=1.65.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
