[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedotllm"
version = "0.1.0"
description = "Description of the project"
authors = [
    {name = "Alexey Lapin", email = "a.lapin@itmo.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "typer>=0.15.2,<0.16.0",
    "hydra-core>=1.3.2,<2.0.0",
    "rich>=13.9.4,<14.0.0",
    "autogluon-tabular[all]>=1.2,<2.0",
    "openai>=1.65.3,<2.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "fedot>=0.7.5,<0.8.0",
    "autogluon>=1.2,<2.0",
    "giotto-tda>=0.6.0,<0.7.0",
    "ripser>=0.6.4,<0.7.0",
    "protobuf>=5.29.0,<6.0.0",
    "opencv-python>=4.11.0,<5.0.0",
    "pillow>=11.1.0,<12.0.0",
    "tensorflow>=2.18.0,<3.0.0",
    "langfuse>=2.60.7,<3.0.0",
    "python-dotenv>=1.1.0",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typer = "*"
hydra-core = ">=1.3.2,<2.0.0"
rich = ">=13.9.4,<14.0.0"
autogluon-tabular = {extras = ["all"], version = ">=1.2,<2.0"}
openai = ">=1.65.3,<2.0.0"
tenacity = ">=9.0.0,<10.0.0"
fedot = ">=0.7.5,<0.8.0"
fedot-ind = { git = "https://github.com/aimclub/Fedot.Industrial.git" }
autogluon = ">=1.2,<2.0"
# Not used in Fedot Assistant but needed for fedot
giotto-tda = ">=0.6.0,<0.7.0"
ripser = ">=0.6.4,<0.7.0"
protobuf = ">=5.29.0,<6.0.0"
opencv-python = ">=4.11.0,<5.0.0"
pillow = ">=11.1.0,<12.0.0"
tensorflow = ">=2.18.0,<3.0.0"

[project.scripts]
fedotllm = "fedotllm:main"
